# utest

./: .clang-tidy  CMakeLists.txt  LICENSE  README  README.md
source/: CMakeLists.txt  state.cpp  state.hpp
src/: CMakeLists.txt  assert.hpp  main.cpp  state.cpp  state.hpp  utest.hpp  utility.hpp
test/: CMakeLists.txt  assert.cpp  common.hpp  main.cpp  state.cpp  utility.cpp  vector.cpp
