cmake_minimum_required (VERSION 3.15)

add_library (utest STATIC)
add_library (utest::utest ALIAS utest)
target_sources (utest PRIVATE main.cpp state.cpp)
target_include_directories (utest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    target_compile_options (utest PRIVATE /permissive- /W4 /WX PUBLIC /std:c++20)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    target_compile_options (utest PRIVATE -pedantic -Wall -Wextra -Werror PUBLIC -std=c++20)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    target_compile_definitions (utest PUBLIC UTEST_CLANG)
    target_compile_options (utest PRIVATE -pedantic -Wall -Wextra -Werror PUBLIC -std=c++20)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
    target_compile_options (utest PRIVATE -pedantic -Wall -Wextra -Werror PUBLIC -std=c++2a)
endif ()
